--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,13 @@
     </div>
     <div>
       <a href="/">Home</a>
-      <a href="/logout">Logout</a>
+      <% @user = User.find_by({ "id" => session["user_id"] }) %>
+      <% if @user == nil %>
       <a href="/login">Login</a>
       <a href="/users/new">Signup</a>
+      <%else%>
+      <a href="/logout">Logout</a>
+      <%end%>
     </div>
 
     <%= yield %>
