--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Entry</h1>
-
+<% if @user != nil %>
 <form action="/entries" method="post">
   <input type="hidden" name="place_id" value="<%= params["place_id"] %>">
 
@@ -20,3 +20,6 @@
 
   <button>Save</button>
 </form>
+<% else %>
+  You must first <a href="/login">login</a> to post.
+<% end %>
