--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -3,23 +3,26 @@
 <form action="/entries" method="post">
   <input type="hidden" name="place_id" value="<%= params["place_id"] %>">
 
-  <p>
-    <label for="title_input">Title</label>
-    <input type="text" name="title" id="title_input">
-  </p>
-
-  <p>
-    <label for="description_input">Description</label>
-    <input type="text" name="description" id="description_input">
-  </p>
-
-  <p>
-    <label for="occurred_on_input">Occurred On</label>
-    <input type="date" name="occurred_on" id="occurred_on_input">
-  </p>
-
-  <button>Save</button>
+  <div class="mb-3 row">
+    <label for="title_input" class="col-sm-2 col-form-label">Title</label>
+    <div class="col-sm-10">
+      <input type="text" class="title" id="title_input" name="title">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="description_input" class="col-sm-2 col-form-label">Description</label>
+    <div class="col-sm-10">
+      <input type="text" class="description" id="description_input" name="description">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="occurred_on_input" class="col-sm-2 col-form-label">Occured On</label>
+    <div class="col-sm-10">
+      <input type="date" class="occurred_on" id="occurred_on_input" name="occured_on">
+    </div>
+  </div>
+<button class="btn btn-success">Save</button>
 </form>
 <% else %>
-  You must first <a href="/login">login</a> to post.
+  You must first <a class="btn btn-primary" href="/login">login</a> to post.
 <% end %>
