--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,11 +2,11 @@
 
 <ul>
   <% for place in @places %>
-    <li><a href="/places/<%= place["id"] %>"><%= place["name"] %></a></li>
+  <ol class="list-group list-group-numbered">
+  <li><a href="/places/<%= place["id"] %>" class="list-group-item"><%= place["name"] %></a></li>
   <% end %>
 </ul>
 
 <p>
-  <a class="btn btn-primary" href="/places/new" role="button">New Place</a>
-
+  <a class="btn btn-primary" href="/places/new">New Place</a>
 </p>
