--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,10 +1,11 @@
 <h1>New Place</h1>
 
 <form action="/places" method="post">
-  <p>
-    <label for="name_input">Name</label>
-    <input type="text" name="name" id="name_input">
-  </p>
-
-  <button>Save</button>
+<div class="mb-3 row">
+    <label for="place_input" class="col-sm-2 col-form-label">Name</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputplace" name="name">
+    </div>
+</div>
+<button class="btn btn-success">Save</button>
 </form>
