--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,16 +1,22 @@
 <h1><%= @place["name"] %></h1>
 
 <h2>My Entries</h2>
+<div class="row">
 <% for entry in @entries %>
-  <h3><%= entry["title"] %></h3>
-  <h4><%= entry["occurred_on"] %></h4>
-  <p><%= entry["description"] %></p>
+<div class="col-md-4">
+<div class="card mb-3">
+<div class="card-body">
+  <h3 class="card-title"><%= entry["title"] %></h3>
+  <h4 class="card-subtitle text-muted"><%= entry["occurred_on"] %></h4>
+  <p class="card-text"><%= entry["description"] %></p>
+</div>
+</div>
+</div>
 <% end %>
-
 <p>
-  <a href="/entries/new?place_id=<%= @place["id"] %>">New Entry</a>
+  <a class="btn btn-primary" href="/entries/new?place_id=<%= @place["id"] %>">New Entry</a>
 </p>
 
 <p>
-  <a href="/places">Back to All Places</a>
+  <a class="btn btn-primary" href="/places">Back to All Places</a>
 </p>
