--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,23 @@
 <h1>New User Account</h1>
 
 <form action="/users" method="post">
-  <p>
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username">
-  </p>
-  <p>
-    <label for="email">Email</label>
-    <input type="text" name="email" id="email">
-  </p>
-  <p>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password">
-  </p>
-  <button>Signup</button>
+  <div class="mb-3 row">
+    <label for="username_input" class="col-sm-2 col-form-label">Username</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputusername" name="username">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="email_input" class="col-sm-2 col-form-label">Email</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputemail" name="email">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword" name="password">
+    </div>
+  </div>
+<button class="btn btn-success">Sign Up</button>
 </form>
