hw4-almost done

--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -18,7 +18,7 @@
   <div class="mb-3 row">
     <label for="occurred_on_input" class="col-sm-2 col-form-label">Occured On</label>
     <div class="col-sm-10">
-      <input type="date" class="occurred_on" id="occurred_on_input" name="occured_on">
+      <input type="date" class="occurred_on" id="occurred_on_input" name="occurred_on">
     </div>
   </div>
 <button class="btn btn-success">Save</button>
