--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>New User Account</h1>
 
 <form action="/users" method="post">
+  <div class="w-50 p-3">
   <div class="mb-3 row">
     <label for="username_input" class="col-sm-2 col-form-label">Username</label>
     <div class="col-sm-10">
@@ -19,5 +20,6 @@
       <input type="password" class="form-control" id="inputPassword" name="password">
     </div>
   </div>
+  <div>
 <button class="btn btn-success">Sign Up</button>
 </form>
