--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,26 +1,28 @@
 <h1>New Entry</h1>
 <% if @user != nil %>
-<form action="/entries" method="post">
+<form action="/entries" method="post" enctype="multipart/form-data">
   <input type="hidden" name="place_id" value="<%= params["place_id"] %>">
 
-  <div class="mb-3 row">
+  <div class="mb-3">
     <label for="title_input" class="col-sm-2 col-form-label">Title</label>
-    <div class="col-sm-10">
-      <input type="text" class="title" id="title_input" name="title">
+    <input type="text" class="title" id="title_input" name="title">
     </div>
-  </div>
-  <div class="mb-3 row">
+
+  <div class="mb-3">
     <label for="description_input" class="col-sm-2 col-form-label">Description</label>
-    <div class="col-sm-10">
-      <input type="text" class="description" id="description_input" name="description">
-    </div>
+    <input type="text" class="description" id="description_input" name="description">
   </div>
-  <div class="mb-3 row">
+
+  <div class="mb-3">
     <label for="occurred_on_input" class="col-sm-2 col-form-label">Occured On</label>
-    <div class="col-sm-10">
-      <input type="date" class="occurred_on" id="occurred_on_input" name="occurred_on">
+    <input type="date" class="occurred_on" id="occurred_on_input" name="occurred_on">
     </div>
-  </div>
+ 
+  <div class="mb-3">
+    <label for="uploaded_image_input" class="form-label">Upload Image</label>
+    <input type="file" name="uploaded_image" id="uploaded_image_input" class="form-control" accept="image/png, image/jpg, image/jpeg, image/gif">
+</div>
+
 <button class="btn btn-success">Save</button>
 </form>
 <% else %>
